src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>CategoryNumber__c</fullName>
        <displayFormat>CAT-{0000}</displayFormat>
        <label>CategoryNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IsParentCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.IsParentCategory__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>SubCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Category__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Expense_Category</fullName>
        <columns>NAME</columns>
        <columns>Parent_Category__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filters>
        <label>All Expense Category</label>
    </listViews>
    <listViews>
        <fullName>All_Income</fullName>
        <columns>NAME</columns>
        <columns>Parent_Category__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Income</value>
        </filters>
        <label>All Income Category</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>Expense_Category</fullName>
        <active>true</active>
        <description>Categories for expenses</description>
        <label>Expense Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>Income_Category</fullName>
        <active>true</active>
        <description>Categories for incomes</description>
        <label>Income Category</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>